deployment/order-service/blue-deployment.yml
# live version of the application that users interact with

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-blue 
  namespace: order-service
  labels:
    app: order-service
    environment: blue

spec:
  replicas: 3
  selector:
    matchLabels:
      app: order-service
      environment: blue
  template:
    metadata:
      labels:
        app: order-service
        environment: blue
    spec:
      containers:
      - name: order-service
        image: order-service:latest
        ports:
        - containerPort: 8080
      - name: postgres-db
        image: postgres:14
        ports:
          - containerPort: 5432
