deployment/order-service/green-deployment.yml
#  The new version of the application that is being tested and prepared for deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-green 
  namespace: order-service
  labels:
    app: order-service
    environment: green

spec:
  replicas: 3
  selector:
    matchLabels:
      app: order-service
      environment: green
  template:
    metadata:
      labels:
        app: order-service
        environment: green
    spec:
      containers:
      - name: order-service
        image: order-service:latest
        ports:
        - containerPort: 8080
      - name: postgres-db
        image: postgres:14
        ports:
          - containerPort: 5432
